--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -43,8 +43,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:23.2.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
 
-    def billing_version = "6.0.0"
-    implementation "com.android.billingclient:billing:$billing_version"
+    implementation "com.android.billingclient:billing:7.0.0"
     implementation "com.google.guava:guava:27.1-android"
 
     implementation 'com.google.firebase:firebase-analytics:22.0.2'
