--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -41,13 +41,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
 
     //admob
-    implementation 'com.google.android.gms:play-services-ads:21.4.0'
-    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'com.google.android.gms:play-services-ads:23.2.0'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.1.0'
+
     //mediation admob
-    implementation 'com.google.ads.mediation:facebook:6.12.0.0'
-    implementation 'com.google.ads.mediation:adcolony:4.8.0.0'
-    implementation 'com.google.ads.mediation:applovin:11.5.1.0'
-    implementation 'com.google.ads.mediation:vungle:6.12.0.0'
+    implementation 'com.google.ads.mediation:facebook:6.17.0.0'
+    implementation 'com.google.ads.mediation:applovin:12.5.0.0'
+    implementation 'com.google.ads.mediation:vungle:7.3.2.0'
 
 
     def lifecycle_version = "2.0.0"
@@ -55,28 +55,26 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-analytics:22.0.2'
 
-    def multidex_version = "2.0.1"
-    implementation "androidx.multidex:multidex:$multidex_version"
-    def billing_version = "5.1.0"
-    implementation "com.android.billingclient:billing:$billing_version"
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation "com.android.billingclient:billing:7.0.0"
     implementation "com.google.guava:guava:27.1-android"
     //adjust
     implementation 'com.adjust.sdk:adjust-android:4.33.1'
     implementation 'com.android.installreferrer:installreferrer:2.2'
 
-    implementation 'com.google.android.gms:play-services-appset:16.0.0'
-    implementation 'com.google.android.gms:play-services-basement:17.1.1'
+    implementation 'com.google.android.gms:play-services-appset:16.1.0'
+    implementation 'com.google.android.gms:play-services-basement:18.4.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
 
     //fb sdk
-    implementation 'com.facebook.android:facebook-android-sdk:15.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:16.1.3'
 
-    implementation 'com.airbnb.android:lottie:5.0.2'
+    implementation 'com.airbnb.android:lottie:6.3.0'
 
     // applovin
-    implementation 'com.applovin:applovin-sdk:11.4.2'
+    implementation 'com.applovin:applovin-sdk:12.5.0'
 
     // appsflyer
     implementation 'com.appsflyer:af-android-sdk:6.8.2'
